move buggy overflow, update readme

--- a/src/style/demo.styl
+++ b/src/style/demo.styl
@@ -14,7 +14,6 @@ body
 section
   margin 0 auto
   padding 0 1rem
-  overflow hidden
 
   .section-heading
     margin 0 auto
@@ -154,6 +153,8 @@ code
     margin-bottom 3rem
 
 @media screen and (max-width: 719px)
+  section
+    overflow hidden
   table
     td
       padding .5rem
